Added in some temporary comments to help myself keep track of things